update with assignment requirements

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
 		<section class="mainsection">
 			<h3>Welcome to My Home Page</h3>
 			<br>
-			<p>Here you will be able to view the work I have done during this semester.</p>
+			<p>Here <em>you</em> will be able to view the work I have done during <strong>this</strong> semester.</p>
+            <p>Here are some of my favorite activities:</p>
+            <ul>
+                <li>Web Development (not sucking up - it's real!)</li>
+                <li>Cake Decorating</li>
+                <li>Card Making</li>
+                <li>Board Games</li>
+            </ul>
 		</section>
 	</main>
 </body>
