--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<input type="checkbox" id="menu-check">
 			<ul class="topnav">
 				<li><a href="index.html">Home</a></li>
-					Week 1
+				<li>Week 1
 					<ul>
 						<li><a href="#">Template</a></li>
 						<li><a href="#">Template</a></li>
