--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li>Card Making</li>
                 <li>Board Games</li>
             </ul>
+            <img src="images/profile.jpg" alt="Me - Aug 2021">
 		</section>
 	</main>
 </body>
