--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li>Cake Decorating</li>
                 <li>Card Making</li>
                 <li>Board Games</li>
+                <li>Spending time with family</li>
             </ul>
             <img src="images/profile.jpg" alt="Me - Aug 2021">
 		</section>
