--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="description" content="Nanci Newell WDD130 Class Content">
+	<meta name="keywords" content="HTML, CSS, JavaScript">
+  	<meta name="author" content="Nanci Newell">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>WDD130 Nanci Newell</title>
     <link rel="stylesheet" media="screen" href="styles/main.css">
 	<link rel="stylesheet" media="screen" href="styles/large.css">
@@ -12,7 +16,7 @@
 	<header>
 		<h1><span id="brand">nanci</span>newell</h1>
 		<h2>WDD 130 - Web Fundamentals</h2>
-		<h4>Fall 2021</h4>
+		<h3>Fall 2021</h3>
 	</header>
 	
 	<main>
