--- a/week1.html
+++ b/week1.html
@@ -35,11 +35,17 @@
 		
 		<section class="mainsection">
 			<h3>Welcome to My Home Page</h3>
-			<img src="images/profile.jpg" alt="Me - Aug 2021">
-			<p>From here, you will be able to review the work created this semester. Please note that the original homepage created in week one has been moved to the Week 1 Intro Page.</p>
+			<br>
+			<p>Here <em>you</em> will be able to view the work I have done during <strong>this</strong> semester.</p>
             <p>Here are some of my favorite activities:</p>
-            
-            
+            <ul>
+                <li>Web Development (not sucking up - it's real!)</li>
+                <li>Cake Decorating</li>
+                <li>Card Making</li>
+                <li>Board Games</li>
+                <li>Spending time with family</li>
+            </ul>
+            <img src="images/profile.jpg" alt="Me - Aug 2021">
 		</section>
 	</main>
 </body>
