--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 				<li><a href="index.html">Home</a></li>
 				<li>Week 1
 					<ul>
-						<li><a href="#">Intro Page</a></li>
+						<li><a href="#">Introduction</a></li>
+					</ul>
+				</li>
+				<li>Week 2
+					<ul>
+						<li><a href="#">Siteplan</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -36,11 +41,11 @@
 		<section class="mainsection">
 			<h3>Welcome to My Home Page</h3>
 			<img src="images/profile.jpg" alt="Me - Aug 2021">
-			<p>From here, you will be able to review the work created this semester. Please note that the original homepage created in week one has been moved to the Week 1 Intro Page.</p>
-            <p>Here are some of my favorite activities:</p>
-            
-            
+			<p>From here, you will be able to review the work created this semester. Please note that the original homepage created in week one has been moved to the Week 1 Introduction page.</p>
 		</section>
 	</main>
+	<footer>
+		<p>&#169;Nanci Newell 2021</p>
+	</footer>
 </body>
 </html>
