--- a/week1.html
+++ b/week1.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="HTML, CSS, JavaScript">
   	<meta name="author" content="Nanci Newell">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>WDD130 Nanci Newell</title>
+	<title>Introduction</title>
     <link rel="stylesheet" media="screen" href="styles/main.css">
 	<link rel="stylesheet" media="screen" href="styles/large.css">
 </head>
@@ -27,7 +27,12 @@
 				<li><a href="index.html">Home</a></li>
 				<li>Week 1
 					<ul>
-						<li><a href="#">Intro Page</a></li>
+						<li><a href="#">Introduction</a></li>
+					</ul>
+				</li>
+				<li>Week 2
+					<ul>
+						<li><a href="#">Siteplan</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -48,5 +53,8 @@
             <img src="images/profile.jpg" alt="Me - Aug 2021">
 		</section>
 	</main>
+    <footer>
+		<p>&#169;Nanci Newell 2021</p>
+	</footer>
 </body>
 </html>
